--- a/client/js/index.html
+++ b/client/js/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="modules/menus/login_menu/LoginMenu.css">
     <link rel="stylesheet" href="modules/menus/leaderboard/Leaderboard.css">
     <link rel="stylesheet" href="modules/menus/about/About.css">
+    <script src="modules/menus/profile_entry/ProfileEntry.js"></script>
+    <script src="modules/menus/play_menu/PlayMenu.js"></script>
+    <script src="modules/menus/play_menu/ProfileMenu.js"></script>
 </head>
 
 <body>
@@ -26,6 +29,7 @@
     document.profileBlock = null;
     document.login = null;
     document.register = null;
+    document.profileMenu = null;
 
     // Current User
     document.currentUser = null;
@@ -49,6 +53,7 @@
 <!-- menus go here --->
 <script src="modules/menus/main_menu/MainMenu.js"></script>
 <script src="modules/menus/play_menu/PlayMenu.js"></script>
+<script src="modules/menus/profile_menu/ProfileMenu.js"></script>
 <script src="modules/menus/profile_entry/ProfileEntry.js"></script>
 <script src="modules/menus/login_menu/LoginMenu.js"></script>
 
