--- a/client/js/index.html
+++ b/client/js/index.html
@@ -14,6 +14,7 @@
     <script src="modules/menus/profile_entry/ProfileEntry.js"></script>
     <script src="modules/menus/play_menu/PlayMenu.js"></script>
     <script src="modules/menus/play_menu/ProfileMenu.js"></script>
+    <script src="modules/menus/profile_menu/ProfileTemplate.js"></script>
 </head>
 
 <body>
@@ -49,6 +50,7 @@
 <!-- Templates go here -->
 <script src="modules/menus/leaderboard/LeaderboardTemplate.js"></script>
 <script src="modules/menus/about/AboutTemplate.js"></script>
+<script src="modules/menus/profile_menu/ProfileTemplate.js"></script>
 
 <!-- menus go here --->
 <script src="modules/menus/main_menu/MainMenu.js"></script>
