--- a/client/js/index.html
+++ b/client/js/index.html
@@ -15,6 +15,7 @@
     <script src="modules/menus/play_menu/PlayMenu.js"></script>
     <script src="modules/menus/play_menu/ProfileMenu.js"></script>
     <script src="modules/menus/profile_menu/ProfileTemplate.js"></script>
+    <script src="main.js"></script>
 </head>
 
 <body>
