added base input and button logic

--- a/client/data/index.html
+++ b/client/data/index.html
@@ -38,7 +38,7 @@
 
 <!-- modules go here -->
 <script src="modules/Services.js"></script>
-<script src="modules/Widget.js"></script>
+<script src="modules/blocks/widget.js"></script>
 <script src="modules/input/Input.js"></script>
 <script src="modules/menu_items/MenuItem.js"></script>
 <script src="modules/menu_container/MenuContainer.js"></script>
