--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,7 @@
 <script src="./Modules/Views/LoginMenuView/LoginMenuViewTemplate.js"></script>
 <script src="./Modules/Views/RegisterMenuView/RegisterMenuViewTemplate.js"></script>
 <script src="./Modules/Views/UserProfileBlockView/UserProfileBlockViewTemplate.js"></script>
+<script src="./Modules/Views/ProfileMenuView/ProfileMenuViewTemplate.js"></script>
 
 <script src="./main.js" type="module"></script>
 
